# crimson-veil

./: .gitignore  CMakeLists.txt  CrimsonVeil.vpk  LICENSE  Makefile  README.md
src/: audio.c  audio.h  boss.c  boss.h  character.c  character.h  collection.c  collection.h  config.h  enemy.c  enemy.h  fusion.c  fusion.h  fx.c  fx.h  game.c  game.h  input.c  input.h  main.c  menu.c  menu.h  mission.c  mission.h  pickup.c  pickup.h  player.c  player.h  render.c  render.h  save.c  save.h  sprite.c  sprite.h  types.c  types.h  upgrade.c  upgrade.h  wave.c  wave.h  (+2 more)
